; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_em_meta.c_meta_var_compare.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/sched/extr_em_meta.c_meta_var_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.meta_obj = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.meta_obj*, %struct.meta_obj*)* @meta_var_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @meta_var_compare(%struct.meta_obj* %0, %struct.meta_obj* %1) #0 {
  %3 = alloca %struct.meta_obj*, align 8
  %4 = alloca %struct.meta_obj*, align 8
  %5 = alloca i32, align 4
  store %struct.meta_obj* %0, %struct.meta_obj** %3, align 8
  store %struct.meta_obj* %1, %struct.meta_obj** %4, align 8
  %6 = load %struct.meta_obj*, %struct.meta_obj** %3, align 8
  %7 = getelementptr inbounds %struct.meta_obj, %struct.meta_obj* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 8
  %9 = load %struct.meta_obj*, %struct.meta_obj** %4, align 8
  %10 = getelementptr inbounds %struct.meta_obj, %struct.meta_obj* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = sub nsw i32 %8, %11
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp eq i32 %13, 0
  br i1 %14, label %15, label %28

15:                                               ; preds = %2
  %16 = load %struct.meta_obj*, %struct.meta_obj** %3, align 8
  %17 = getelementptr inbounds %struct.meta_obj, %struct.meta_obj* %16, i32 0, i32 1
  %18 = load i64, i64* %17, align 8
  %19 = inttoptr i64 %18 to i8*
  %20 = load %struct.meta_obj*, %struct.meta_obj** %4, align 8
  %21 = getelementptr inbounds %struct.meta_obj, %struct.meta_obj* %20, i32 0, i32 1
  %22 = load i64, i64* %21, align 8
  %23 = inttoptr i64 %22 to i8*
  %24 = load %struct.meta_obj*, %struct.meta_obj** %3, align 8
  %25 = getelementptr inbounds %struct.meta_obj, %struct.meta_obj* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @memcmp(i8* %19, i8* %23, i32 %26)
  store i32 %27, i32* %5, align 4
  br label %28

28:                                               ; preds = %15, %2
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @memcmp(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
